--- a/package.yaml
+++ b/package.yaml
@@ -21,6 +21,14 @@ description:         Please see the README on GitHub at <https://github.com/gith
 
 dependencies:
 - base >= 4.7 && < 5
+- ghc-prim
+- vector
+- time
+- random
+- directory
+- hashmap
+- hspec
+- QuickCheck
 
 library:
   source-dirs: src
