--- a/vec2words.cabal
+++ b/vec2words.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: eccc2ba939620b6022847b039b2e87bd3a28486d317cedc10600aafeed593178
+-- hash: b8fe262def61941ea5e56eb7dadc014dfbfa6b9c47ebca96dc1b253c5ba1d6b3
 
 name:           vec2words
 version:        0.1.0.0
@@ -35,7 +35,15 @@ library
   hs-source-dirs:
       src
   build-depends:
-      base >=4.7 && <5
+      QuickCheck
+    , base >=4.7 && <5
+    , directory
+    , ghc-prim
+    , hashmap
+    , hspec
+    , random
+    , time
+    , vector
   default-language: Haskell2010
 
 executable vec2words-exe
@@ -46,8 +54,16 @@ executable vec2words-exe
       app
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
-      base >=4.7 && <5
+      QuickCheck
+    , base >=4.7 && <5
+    , directory
+    , ghc-prim
+    , hashmap
+    , hspec
+    , random
+    , time
     , vec2words
+    , vector
   default-language: Haskell2010
 
 test-suite vec2words-test
@@ -59,6 +75,14 @@ test-suite vec2words-test
       test
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
-      base >=4.7 && <5
+      QuickCheck
+    , base >=4.7 && <5
+    , directory
+    , ghc-prim
+    , hashmap
+    , hspec
+    , random
+    , time
     , vec2words
+    , vector
   default-language: Haskell2010
