--- a/vec2words.cabal
+++ b/vec2words.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 5e02fe6495e3b3d4f8c16ff59a3fda9f5e05d03b8b8a2e439c5fec709c5ef3bc
+-- hash: 4b43cc407b0b4791278d985b0bd36c93189bb70cd72f2362c4872ee82a95e5c5
 
 name:           vec2words
 version:        0.1.0.0
@@ -77,7 +77,7 @@ test-suite vec2words-test
       Paths_vec2words
   hs-source-dirs:
       test
-  ghc-options: -threaded -rtsopts -with-rtsopts=-N
+  ghc-options: -threaded -rtsopts -with-rtsopts=-N -O2 -optc-O3 -funfolding-use-threshold=0 -fexcess-precision
   build-depends:
       QuickCheck
     , base >=4.7 && <5
